feat(central): detalha e configura modulos
